--- a/.github/workflows/watch-dependencies.yaml
+++ b/.github/workflows/watch-dependencies.yaml
@@ -23,7 +23,7 @@ jobs:
   update-image-dependencies:
     # Don't schedule runs on forks, but allow the job to execute on push and
     # workflow_dispatch for CI development purposes.
-    if: github.repository == 'jupyterhub/mybinder.org-deploy' || github.event_name != 'schedule'
+    if: github.repository == 'manics/mybinder.org-deploy' || github.event_name != 'schedule'
 
     runs-on: ubuntu-20.04
     environment: watch-dependencies-env
@@ -93,9 +93,9 @@ jobs:
         uses: peter-evans/create-pull-request@v4.1.1
         # Don't try open PRs in forks or when the job is triggered by a push to
         # a branch other than the default branch.
-        if: github.repository == 'jupyterhub/mybinder.org-deploy' && (github.event_name != 'push' || github.ref == 'refs/heads/master')
+        if: github.repository == 'manics/mybinder.org-deploy' && (github.event_name != 'push' || github.ref == 'refs/heads/dependencies-list-prs-test')
         with:
-          token: "${{ secrets.jupyterhub_bot_pat }}"
+          token: "${{ secrets.GITHUB_TOKEN }}"
           author: JupterHub Bot Account <105740858+jupyterhub-bot@users.noreply.github.com>
           committer: JupterHub Bot Account <105740858+jupyterhub-bot@users.noreply.github.com>
           branch: update-image-${{ matrix.name }}
@@ -115,7 +115,7 @@ jobs:
   update-chart-dependencies:
     # Don't schedule runs on forks, but allow the job to execute on push and
     # workflow_dispatch for CI development purposes.
-    if: github.repository == 'jupyterhub/mybinder.org-deploy' || github.event_name != 'schedule'
+    if: github.repository == 'manics/mybinder.org-deploy' || github.event_name != 'schedule'
 
     runs-on: ubuntu-20.04
     environment: watch-dependencies-env
@@ -221,9 +221,9 @@ jobs:
         uses: peter-evans/create-pull-request@v4.1.1
         # Don't try open PRs in forks or when the job is triggered by a push to
         # a branch other than the default branch.
-        if: github.repository == 'jupyterhub/mybinder.org-deploy' && (github.event_name != 'push' || github.ref == 'refs/heads/master')
+        if: github.repository == 'manics/mybinder.org-deploy' && (github.event_name != 'push' || github.ref == 'refs/heads/dependencies-list-prs-test')
         with:
-          token: "${{ secrets.jupyterhub_bot_pat }}"
+          token: "${{ secrets.GITHUB_TOKEN }}"
           author: JupterHub Bot Account <105740858+jupyterhub-bot@users.noreply.github.com>
           committer: JupterHub Bot Account <105740858+jupyterhub-bot@users.noreply.github.com>
           branch: update-chart-${{ matrix.chart_dep_name }}
